--- a/covid19/index.html
+++ b/covid19/index.html
@@ -58,7 +58,7 @@
 <!-- Global -->
 <section class="global">
   <div class="container">
-    <h1 class="text-center">Country Name:   <span class="cname">Global<span>  <i class="fas fa-globe-asia" style="color:#004d00; margin-left: 5px;"></i></span></span></h1>
+    <h1 class="text-center">Country Name:   <span class="cname" style="color:red;">Global<span>  <i class="fas fa-globe-asia" style="color:#004d00; margin-left: 5px;"></i></span></span></h1>
     <br><br>
   </div>
 </section>
