--- a/covid19/index.html
+++ b/covid19/index.html
@@ -112,8 +112,9 @@
 <section class="footer">
   <div class="container">
     <pre class="text-center text-capitalize" style="font-family: arial; margin-top:100px;">This is A Simple Covid-19 Case Tracker APP coded by <b>rohit lohia</b>.
+    <p class="text-center text-capitalize" style="font-family: arial; margin-top:100px;">This is A Simple Covid-19 Case Tracker APP coded by <b>rohit lohia</b>.
 technologies used: HTML5, CSS3, Javascript, AJAX,
-Fetch API, JSON</pre>
+Fetch API, JSON</p>
     
   </div>
 
