--- a/covid19/index.html
+++ b/covid19/index.html
@@ -4,12 +4,13 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="shortcut icon" type="image/jpg" href="virus.jpg">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
 
-
+  
   <title>Covid-19 Tracker</title>
 </head>
 <body>
@@ -94,6 +95,7 @@
    <!-- Screen Loading Animation-->
   <div class="spinner-border text-primary spin" style="width:5rem;height:5rem;" role="status">
   <span class="sr-only">Loading...</span>
+
 </div>
 
    <!-- Screen Loading Animation-->
